Added live tracking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         </activity>
         <activity android:name=".fareprice"></activity>
         <activity android:name=".qrcode_scanner"></activity>
+        <activity android:name=".livetracking"></activity>
     </application>
 
 </manifest>
